<resources>
    <string name="app_name">LinMileageCalendar</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="saturday">六</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="button_close">关闭</string>
    <string name="item_month_month_total_place_holder">-月总计：--km</string>
    <string name="item_month_month_total">%1$s月总计：%2$skm</string>
</resources>
