<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/month_view_header_padding"
        android:paddingTop="@dimen/month_view_header_padding">

        <TextView
            style="@style/MonthView.Header.Text.Secondary"
            android:text="@string/sunday"/>

        <TextView
            style="@style/MonthView.Header.Text"
            android:text="@string/monday"/>

        <TextView
            style="@style/MonthView.Header.Text"
            android:text="@string/tuesday"/>

        <TextView
            style="@style/MonthView.Header.Text"
            android:text="@string/wednesday"/>

        <TextView
            style="@style/MonthView.Header.Text"
            android:text="@string/thursday"/>

        <TextView
            style="@style/MonthView.Header.Text"
            android:text="@string/friday"/>

        <TextView
            style="@style/MonthView.Header.Text.Secondary"
            android:text="@string/saturday"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>
</LinearLayout>